[package]
name = "gui_tool"
version = "0.1.0"
authors = ["Tatsunori Shiomoto <ryuusyou3174@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.7.0", features = ["unstable"]}
iced = "0.2.0"
iced_futures = "0.2.0"
iced_native = "0.3.0"
thiserror = "1.0.22"
