[package]
name = "web_todo"
version = "0.1.0"
authors = ["Tatsunori Shiomoto <ryuusyou3174@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.0"
askama = "0.10.5"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
thiserror = "1.0.22"
rusqlite = { version="0.24", features=["bundled"] }